[gd_scene format=3 uid="uid://bet0ba0xkipef"]

[ext_resource type="Script" uid="uid://cd4yfvvkiqct3" path="res://addons/sprouty_dialogs/editor/components/scripts/array_field.gd" id="1_xxt5a"]
[ext_resource type="StyleBox" uid="uid://mg3i3uibymj8" path="res://addons/sprouty_dialogs/editor/theme/array_field_panel_highlight.tres" id="2_oux77"]

[sub_resource type="DPITexture" id="DPITexture_vpchq"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="ArrayField" type="VBoxContainer" unique_id=1875105205]
size_flags_horizontal = 3
script = ExtResource("1_xxt5a")

[node name="CollapseButton" type="Button" parent="." unique_id=1462123895]
layout_mode = 2
size_flags_vertical = 0
toggle_mode = true
text = "Array (size 0)"

[node name="ItemsPanel" type="PanelContainer" parent="." unique_id=2047515622]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_oux77")

[node name="ItemsContainer" type="VBoxContainer" parent="ItemsPanel" unique_id=90908890]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="ItemsPanel/ItemsContainer" unique_id=187474739]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Element"
icon = SubResource("DPITexture_vpchq")
